--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "comp3104",
   "version": "1.0.0",
-  "description": "",
+  "description": "- Sabirin  - Kulmiye",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "start": "node index.js"
   },
   "keywords": ["devops", "nodejs", "express", "web"],
   "author": "Sabirin Kulmiye | 101363605",
